--- a/index.html
+++ b/index.html
@@ -20,12 +20,9 @@
         <div class="header text-center">
                 <h1>CRYSTALS COLLECTOR</h1>
                 <br>
-                <br>
                 <h3>MAGIC NUMBER:</h3>
                 <h3 id="magicNumber"></h3>
         </div>
-        <br>
-        <br>
         <br>
         <div class="row">
                 <div class="col-xs-6 col-sm-6 col-md-3 col-lg-3 text-center">
@@ -46,7 +43,6 @@
                 <div class="col-lg-12 directions">
                     <br>
                     <br>
-                    <br>
                     <p>You will be given a random number at the start of the game.</p>
                     <p>There are four crystals below. By clicking on a crystal you will add a specific amount of points to your total score.</p>
                     <p>You win the game by matching your total score to random number, you lose the game if your total score goes above the random number.</p>
@@ -55,10 +51,6 @@
                 </div>
             </div>
     <br>
-    <br>
-    <br>
-    <br>
-
     <div class="row text-center">
 			<div class="col-lg-4 total">
 				<h3>TOTAL SCORE:</h3>
@@ -66,7 +58,7 @@
 			</div>
 			<div class="col-lg-4 button">
 				<h3 id="winOrLose"></h3>
-				<button type="button" class="btn btn-light btn-lg">PLAY AGAIN</button>
+				<button type="button" class="btn btn-light btn-sm">PLAY AGAIN</button>
 			</div>
 			<div class="col-lg-4 scores">
 				<p class="score">WINS: <span id="wins"></span></p> 
