--- a/index.html
+++ b/index.html
@@ -10,38 +10,38 @@
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css"/>
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-	<script type="text/javascript" src="assets/javascript/game.js"></script>
+    <script type="text/javascript" src="assets/javascript/game.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=News+Cycle" rel="stylesheet">
 	
 </head>
-<body style="background-color: #fee8db">
+<body>
 
     <div class="container-fluid">
     
         <div class="header text-center">
-                <h1>CRYSTALS COLLECTOR</h1>
-                <br>
+                <h1>Crystal Collector</h1>
                 <h3>MAGIC NUMBER:</h3>
                 <h3 id="magicNumber"></h3>
         </div>
         <br>
         <div class="row">
                 <div class="col-xs-6 col-sm-6 col-md-3 col-lg-3 text-center">
-                    <img class="crystalImg" id="crystal1" src="assets/images/crystal1.png" alt="Crystal 1"/>
+                    <img class="crystalImg" id="crystal1" src="assets/images/crystal01.png" alt="Crystal 1"/>
                 </div>
                 <div class="col-xs-6 col-sm-6 col-md-3 col-lg-3 text-center">
-                    <img class="crystalImg" id="crystal2" src="assets/images/crystal2.png" alt="Crystal 2"/>
+                    <img class="crystalImg" id="crystal2" src="assets/images/crystal02.png" alt="Crystal 2"/>
                 </div>
                 <div class="col-xs-6 col-sm-6 col-md-3 col-lg-3 text-center">
-                    <img class="crystalImg" id="crystal3" src="assets/images/crystal3.png" alt="Crystal 3"/>
+                    <img class="crystalImg" id="crystal3" src="assets/images/crystal03.png" alt="Crystal 3"/>
                 </div>
                 <div class="col-xs-6 col-sm-6 col-md-3 col-lg-3 text-center">
-                    <img class="crystalImg" id="crystal4" src="assets/images/crystal4.png" alt="Crystal 4"/>
+                    <img class="crystalImg" id="crystal4" src="assets/images/crystal04.png" alt="Crystal 4"/>
                 </div>
         </div>
 
         <div class="row">
                 <div class="col-lg-12 directions">
-                    <br>
                     <br>
                     <p>You will be given a random number at the start of the game.</p>
                     <p>There are four crystals below. By clicking on a crystal you will add a specific amount of points to your total score.</p>
