--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link href="https://fonts.googleapis.com/css?family=News+Cycle" rel="stylesheet">
 	
 </head>
-<body>
+<body background="assets/images/watercolor.jpg">
 
     <div class="container-fluid">
     
